2008-03-16  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/OutputOptionsPanel.cs: Fix bug where the pauseCheckbox control could
	  be greyed out when it should be souldn't.

2008-03-14  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Insert into front of list instead of at the end,
	  fixes bug 368478: "Multi-line build errors are displayed out of order ".

2008-03-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/GeneralOptionsPanel.cs, CBinding.addin.xml: Use new options
	  dialog infrastructure.

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* Parser/LanguageItem.cs, Project/CProject.cs, Compiler/CCompiler.cs: Worked
	  on gnome hig compliant alerts.

2008-02-20  Lluis Sanchez Gual <lluis@novell.com> 

	* ProjectPad/ProjectPackageNodeBuilder.cs: Handle the delete key in
	  TreeViewPad, so it will work event if the shortcut is not defined.

2008-02-19  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Handle better CleanPrecompiledHeaders, fixes bug
	  361045.

2008-02-14  Geoff Norton  <gnorton@novell.com>

	* Parser/TagDatabaseManager.cs: Disable the ctag implementation on OSX 
	as the ctags that apple ships is entirely incompatible with this parser.

2008-02-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Make sure directory exists before attempting to
	  delete it.

2008-02-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Use string.Join instead of custom method.

2008-02-09  Mike Krüger <mkrueger@novell.com> 

	* CBinding.addin.xml, CBinding.mdp, Makefile.am: Removed source editor
	  dependency.

2008-02-07  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/TagDatabaseManager.cs: Improve error handling. Should fix "Bug
	  359567 - MonoDevelop crashes when creating/opening C++ Console Project".

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Update MD version.
